# mc-repack

./: .gitignore  Cargo.toml  LICENSE  README.md  listfiles.ps1
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: release.yml  rust-build.yml
bench/: Cargo.toml
bench/benches/: brackets.rs  compress.rs
benches/: repack_bench.rs
lib-core/: Cargo.toml  README.md
lib-core/src/: cfg.rs  errors.rs  ext.rs  fop.rs  lib.rs  min.rs  optimizer.rs
lib-core/src/entry/: fs.rs  mod.rs  zip.rs
lib-core/src/min/: jar.rs  json.rs  mod.rs  nbt.rs  ogg.rs  png.rs  toml.rs
src/: blacklist.rs  errors.rs  fop.rs  lib.rs  main.rs  min.rs  minify.rs  optimizer.rs
src/entry/: fs.rs  mod.rs  zip.rs
