[package]
name = "mc-repack"
version = "0.18.1"
edition = "2021"
authors = ["Szeweq"]
license = "MIT"
description = "A command-line interface for repacking Minecraft mods and resource packs to optimize size and loading speed."
readme = "README.md"
homepage = "https://szeweq.xyz/mc-repack"
repository = "https://github.com/szeweq/mc-repack"
categories = ["command-line-utilities", "compression", "game-development"]
keywords = ["minecraft", "jar", "processing", "optimizer", "repack"]
exclude = ["/.github", "benches/*", "test-jars/*"]

[workspace]
members = ["lib-core"]

[workspace.dependencies]
zip = {version = "^1.2.3", default-features = false}
crossbeam-channel = "^0.5.8"
anyhow = "1.0"

[[bin]]
name = "mc-repack"
doc = false

[features]
anyhow = ["dep:anyhow"]
argh = ["dep:argh"]

[dependencies]
mc-repack-core = {version = "0.18.1", path = "lib-core"}
crossbeam-channel = {workspace = true}
anyhow = {optional = true, workspace = true}
argh = {optional = true, version = "0.1"}

# CLI Dependencies
clap = {version = "4.5", features = ["derive", "cargo"]}
indicatif = {version = "0.17"}

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"