[package]
name = "mc-repack"
version = "0.20.0"
edition = "2021"
authors = ["Szeweq"]
license = "MIT"
description = "A command-line interface for repacking Minecraft mods and resource packs to optimize size and loading speed."
readme = "README.md"
homepage = "https://szeweq.xyz/mc-repack"
repository = "https://github.com/szeweq/mc-repack"
categories = ["command-line-utilities", "compression", "game-development"]
keywords = ["minecraft", "jar", "processing", "optimizer", "repack"]
exclude = ["/.github", "benches/*", "test-jars/*"]

[workspace]
members = ["lib-core"]

[workspace.dependencies]
zip = {version = "^1.2.3", default-features = false}
toml = "^0.8.0"
serde = "1.0"
crossbeam-channel = "^0.5.8"
anyhow = "1.0"

[[bin]]
name = "mc-repack"
doc = false

[features]
anyhow = ["dep:anyhow"]

[dependencies]
mc-repack-core = {version = "0.20.0", path = "lib-core", features = ["nbt-zopfli", "png-zopfli"]}
crossbeam-channel = {workspace = true}
anyhow = {optional = true, workspace = true}
serde = {workspace = true}
toml = {workspace = true, features = ["preserve_order"]}

# CLI Dependencies
clap = {version = "4.5", features = ["derive", "cargo"]}
indicatif = {version = "0.17"}

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"