[package]
name = "mc-repack"
version = "0.23.0"
edition = "2021"
authors = ["Szeweq"]
license = "MIT"
description = "A command-line interface for repacking Minecraft mods and resource packs to optimize size and loading speed."
readme = "README.md"
homepage = "https://szeweq.xyz/mc-repack"
repository = "https://github.com/szeweq/mc-repack"
categories = ["command-line-utilities", "compression", "game-development"]
keywords = ["minecraft", "jar", "processing", "optimizer", "repack"]
exclude = ["/.github", "bench/*", "test-jars/*", "test-jars-repack/*"]
rust-version = "1.77.0"

[workspace]
members = ["bench","lib-core"]

[workspace.dependencies]
zip = {version = "^2.1.0", default-features = false}
toml = "^0.8.0"
serde = "1.0"
anyhow = "1.0"
walkdir = "2.5"

[[bin]]
name = "mc-repack"
doc = false

[dependencies]
mc-repack-core = {version = "0.23.0", path = "lib-core", features = ["all-zopfli"]}
crossbeam-channel = "^0.5.8"
anyhow = {workspace = true}
serde = {workspace = true}
toml = {workspace = true, features = ["preserve_order"]}
walkdir = {workspace = true}
pathdiff = "^0.2.1"

# CLI Dependencies
clap = {version = "4.5", features = ["derive", "cargo"]}
indicatif = {version = "0.17"}

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
