[package]
name = "mc-repack-core"
version = "0.20.0"
edition = "2021"
authors = ["Szeweq"]
license = "MIT"
description = "A library for repacking Minecraft mods and resource packs to optimize size and loading speed."
readme = "README.md"
homepage = "https://szeweq.xyz/mc-repack"
repository = "https://github.com/szeweq/mc-repack"
categories = ["compression", "game-development"]
keywords = ["minecraft", "jar", "processing", "optimizer", "repack"]

[features]
anyhow = ["dep:anyhow"]
png = ["dep:oxipng"]
toml = ["dep:toml"]
nbt = []
nbt-zopfli = ["nbt", "dep:zopfli"]
png-zopfli = ["png", "oxipng/zopfli"]
zip-zopfli = ["zip/deflate-zopfli", "dep:zopfli"]
all-zopfli = ["nbt-zopfli", "png-zopfli", "zip-zopfli"]
serde-cfg = ["dep:serde", "serde/derive"]
default = ["png", "toml", "nbt", "serde-cfg"]

[dependencies]
zip = {workspace = true, features = ["deflate"]}
crossbeam-channel = {workspace = true}
anyhow = {optional = true, workspace = true}
serde = {optional = true, workspace = true}
serde_json = {version = "^1.0.93", features = ["preserve_order"]}
oxipng = {optional = true, version = "^9.1.0", default-features = false, features = ["parallel"]}
flate2 = "^1.0.26"
json_comments = "0.2"
toml = {optional = true, workspace = true, features = ["preserve_order"]}
zopfli = {version = "^0.8.0", optional = true}
state = "0.6"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
nursery = "warn"