[package]
name = "mc-repack-core"
version = "0.25.0"
edition = "2021"
authors = ["Szeweq"]
license = "MIT"
description = "A library for repacking Minecraft mods and resource packs to optimize size and loading speed."
readme = "README.md"
homepage = "https://szeweq.xyz/mc-repack"
repository = "https://github.com/szeweq/mc-repack"
categories = ["compression", "game-development"]
keywords = ["minecraft", "jar", "processing", "optimizer", "repack"]
rust-version = "1.75.0"

[features]
png = ["dep:oxipng"]
toml = ["dep:toml"]
ogg = ["dep:optivorbis"]
nbt = []
jar = []
nbt-zopfli = ["nbt", "dep:zopfli", "_any-zopfli"]
png-zopfli = ["png", "oxipng/zopfli", "_any-zopfli"]
zip-zopfli = ["zip/deflate-zopfli", "dep:zopfli", "_any-zopfli"]
all-zopfli = ["nbt-zopfli", "png-zopfli", "zip-zopfli"]
_any-zopfli = []
serde-cfg = ["dep:serde", "serde/derive"]
default = ["png", "toml", "nbt", "ogg", "jar", "serde-cfg"]

[dependencies]
zip = {workspace = true, features = ["deflate"]}
anyhow = {workspace = true}
serde = {optional = true, workspace = true}
serde_json = {version = "^1.0.93", features = ["preserve_order"]}
oxipng = {optional = true, version = "^9.1.0", default-features = false, features = ["parallel"]}
optivorbis = {optional = true, version = "0.2"}
flate2 = "^1.0.26"
json_comments = "0.2"
toml = {optional = true, workspace = true, features = ["preserve_order"]}
zopfli = {version = "^0.8.0", optional = true}
walkdir = {workspace = true}
state = "0.6"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
nursery = "warn"